asatsuyu/crates/asatsuyu-ast/src/snapshots/asatsuyu_ast__tests__snap_bool_literal.snap
---
source: crates/asatsuyu-ast/src/lib.rs
expression: "snapshot(\"fn f() -> Bool {\\n  True\\n}\")"
---
Module {
    imports: [],
    definitions: [
        Function(
            FnDef {
                name: Ident {
                    name: "f",
                    span: Span {
                        file_id: FileId(
                            0,
                        ),
                        start: 3,
                        end: 4,
                    },
                },
                visibility: Private,
                is_async: false,
                params: [],
                return_type: Some(
                    Named {
                        name: Ident {
                            name: "Bool",
                            span: Span {
                                file_id: FileId(
                                    0,
                                ),
                                start: 10,
                                end: 14,
                            },
                        },
                        args: [],
                        span: Span {
                            file_id: FileId(
                                0,
                            ),
                            start: 10,
                            end: 14,
                        },
                    },
                ),
                body: Block {
                    exprs: [
                        Literal(
                            Literal {
                                kind: Bool,
                                value: "True",
                                span: Span {
                                    file_id: FileId(
                                        0,
                                    ),
                                    start: 19,
                                    end: 23,
                                },
                            },
                        ),
                    ],
                    span: Span {
                        file_id: FileId(
                            0,
                        ),
                        start: 14,
                        end: 25,
                    },
                },
                span: Span {
                    file_id: FileId(
                        0,
                    ),
                    start: 0,
                    end: 25,
                },
            },
        ),
    ],
    span: Span {
        file_id: FileId(
            0,
        ),
        start: 0,
        end: 25,
    },
}
