asatsuyu/crates/asatsuyu-ast/src/snapshots/asatsuyu_ast__tests__snap_call_expr.snap
---
source: crates/asatsuyu-ast/src/lib.rs
expression: "snapshot(\"fn f() -> Int {\\n  g(1, 2)\\n}\")"
---
Module {
    imports: [],
    definitions: [
        Function(
            FnDef {
                name: Ident {
                    name: "f",
                    span: Span {
                        file_id: FileId(
                            0,
                        ),
                        start: 3,
                        end: 4,
                    },
                },
                visibility: Private,
                is_async: false,
                pure_span: None,
                params: [],
                return_type: Some(
                    Named {
                        name: Ident {
                            name: "Int",
                            span: Span {
                                file_id: FileId(
                                    0,
                                ),
                                start: 10,
                                end: 13,
                            },
                        },
                        args: [],
                        span: Span {
                            file_id: FileId(
                                0,
                            ),
                            start: 10,
                            end: 13,
                        },
                    },
                ),
                body: Block {
                    exprs: [
                        Call {
                            func: Variable(
                                Ident {
                                    name: "g",
                                    span: Span {
                                        file_id: FileId(
                                            0,
                                        ),
                                        start: 18,
                                        end: 19,
                                    },
                                },
                            ),
                            args: [
                                Literal(
                                    Literal {
                                        kind: Int,
                                        value: "1",
                                        span: Span {
                                            file_id: FileId(
                                                0,
                                            ),
                                            start: 20,
                                            end: 21,
                                        },
                                    },
                                ),
                                Literal(
                                    Literal {
                                        kind: Int,
                                        value: "2",
                                        span: Span {
                                            file_id: FileId(
                                                0,
                                            ),
                                            start: 23,
                                            end: 24,
                                        },
                                    },
                                ),
                            ],
                            span: Span {
                                file_id: FileId(
                                    0,
                                ),
                                start: 18,
                                end: 25,
                            },
                        },
                    ],
                    span: Span {
                        file_id: FileId(
                            0,
                        ),
                        start: 14,
                        end: 27,
                    },
                },
                span: Span {
                    file_id: FileId(
                        0,
                    ),
                    start: 0,
                    end: 27,
                },
            },
        ),
    ],
    span: Span {
        file_id: FileId(
            0,
        ),
        start: 0,
        end: 27,
    },
}
